fix(search): use Set.copyOf instead of fully qualified Collections call
Addresses review feedback — the project's CLAUDE.md forbids fully qualified
names, and Set.copyOf is the idiomatic Java 21 way to return an unmodifiable
set (no Collections import needed).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>